--- a/style.css
+++ b/style.css
@@ -33,7 +33,20 @@ body {
     font-weight: 300;
 }
 
-.block {
+.image-container {
+    display: flex;
+}
+
+/* .parallax-text {
+    z-index: 1000;
+    position: absolute;
+    align-items: center;
+    font-size: 4rem;
+    color: white;
+    font-weight: 300;
+} */
+
+/* .block {
     width: 100%;
     height: 100%;
     position: relative;
@@ -61,4 +74,4 @@ body {
     left: 50%;
     transform: translate(-50%, 0);
     pointer-events: none
-}
+} */
